fix: add new api
