# internal/router/v1/friend_router.go
@@ -1,6 +1,8 @@
 package v1
 
 import (
+	"strconv"
+
 	"github.com/gin-gonic/gin"
 
 	responsepb "github.com/go-goim/api/transport/response"
@@ -26,18 +28,19 @@ func NewFriendRouter() *FriendRouter {
 
 func (r *FriendRouter) Load(g *gin.RouterGroup) {
 	g.GET("/list", r.listRelation)
-	g.POST("/add-friend", r.addFriend)
-	g.POST("/delete-friend", r.deleteFriend)
-	g.POST("/accept-friend", r.acceptFriend)
-	g.POST("/reject-friend", r.rejectFriend)
-	g.POST("/block-friend", r.blockFriend)
-	g.POST("/unblock-friend", r.unblockFriend)
+	g.GET("/request/list", r.listFriendRequest)
+
+	g.POST("/add", r.addFriend)
+	g.POST("/delete", r.deleteFriend)
+	g.POST("/accept", r.acceptFriend)
+	g.POST("/reject", r.rejectFriend)
+	g.POST("/block", r.blockFriend)
+	g.POST("/unblock", r.unblockFriend)
 }
 
 // @Summary 获取好友列表
 // @Description 获取好友列表
 // @Tags [gateway]好友
-// @Accept json
 // @Produce json
 // @Param Authorization header string true "token"
 // @Success 200 {object} response.Response{data=[]friendpb.Friend} "Success"
@@ -59,6 +62,36 @@ func (r *FriendRouter) listRelation(c *gin.Context) {
 	response.SuccessResp(c, list, response.SetTotal(len(list)))
 }
 
+// @Summary 获取好友请求列表
+// @Description 获取好友请求列表
+// @Tags [gateway]好友
+// @Produce json
+// @Param Authorization header string true "token"
+// @Success 200 {object} response.Response{} "Success"
+// @Failure 400 {object} response.Response{} "err"
+// @Router /gateway/v1/user/friend/request/list [get]
+func (r *FriendRouter) listFriendRequest(c *gin.Context) {
+	uid := c.GetString("uid")
+	req := &friendpb.QueryFriendRequestListRequest{
+		Uid: uid,
+	}
+
+	var status int
+	statusStr := c.Query("status")
+	if statusStr != "" {
+		status, _ = strconv.Atoi(statusStr)
+	}
+	req.Status = friendpb.FriendRequestStatus(status)
+
+	list, err := service.GetUserRelationService().QueryFriendRequestList(mid.GetContext(c), req)
+	if err != nil {
+		response.ErrorResp(c, err)
+		return
+	}
+
+	response.SuccessResp(c, gin.H{"list": list}, response.SetTotal(len(list)))
+}
+
 // query user info before add friend
 // @Summary 添加好友
 // @Description 添加好友
@@ -69,7 +102,7 @@ func (r *FriendRouter) listRelation(c *gin.Context) {
 // @Param body body friendpb.AddFriendRequest true "body"
 // @Success 200 {object} friendpb.AddFriendResult
 // @Failure 400 {object} responsepb.BaseResponse "err"
-// @Router /gateway/v1/user/friend/add-friend [post]
+// @Router /gateway/v1/user/friend/add [post]
 func (r *FriendRouter) addFriend(c *gin.Context) {
 	req := &friendpb.AddFriendRequest{}
 	if err := c.ShouldBindWith(req, request.NonValidatePbJSONBinding); err != nil {
@@ -101,7 +134,7 @@ func (r *FriendRouter) addFriend(c *gin.Context) {
 // @Param body body friendpb.BaseFriendRequest true "body"
 // @Success 200 {object} responsepb.BaseResponse "Success"
 // @Failure 400 {object} responsepb.BaseResponse "err"
-// @Router /gateway/v1/user/friend/delete-friend [post]
+// @Router /gateway/v1/user/friend/delete [post]
 func (r *FriendRouter) deleteFriend(c *gin.Context) {
 	req := &friendpb.BaseFriendRequest{}
 	if err := c.ShouldBindWith(req, request.PbJSONBinding{}); err != nil {
@@ -127,7 +160,7 @@ func (r *FriendRouter) deleteFriend(c *gin.Context) {
 // @Param body body friendpb.ConfirmFriendRequestReq true "body"
 // @Success 200 {object} responsepb.BaseResponse "Success"
 // @Failure 400 {object} responsepb.BaseResponse "err"
-// @Router /gateway/v1/user/friend/accept-friend [post]
+// @Router /gateway/v1/user/friend/accept [post]
 func (r *FriendRouter) acceptFriend(c *gin.Context) {
 	req := &friendpb.ConfirmFriendRequestReq{}
 	if err := c.ShouldBindWith(req, request.NonValidatePbJSONBinding); err != nil {
@@ -155,7 +188,7 @@ func (r *FriendRouter) acceptFriend(c *gin.Context) {
 // @Param body body friendpb.ConfirmFriendRequestReq true "body"
 // @Success 200 {object} responsepb.BaseResponse "Success"
 // @Failure 400 {object} responsepb.BaseResponse "err"
-// @Router /gateway/v1/user/friend/reject-friend [post]
+// @Router /gateway/v1/user/friend/reject [post]
 func (r *FriendRouter) rejectFriend(c *gin.Context) {
 	req := &friendpb.ConfirmFriendRequestReq{}
 	if err := c.ShouldBindWith(req, request.NonValidatePbJSONBinding); err != nil {
@@ -183,7 +216,7 @@ func (r *FriendRouter) rejectFriend(c *gin.Context) {
 // @Param body body friendpb.BaseFriendRequest true "body"
 // @Success 200 {object} responsepb.BaseResponse "Success"
 // @Failure 400 {object} responsepb.BaseResponse "err"
-// @Router /gateway/v1/user/friend/block-friend [post]
+// @Router /gateway/v1/user/friend/block [post]
 func (r *FriendRouter) blockFriend(c *gin.Context) {
 	req := &friendpb.BaseFriendRequest{}
 	if err := c.ShouldBindWith(req, request.PbJSONBinding{}); err != nil {
@@ -209,7 +242,7 @@ func (r *FriendRouter) blockFriend(c *gin.Context) {
 // @Param body body friendpb.BaseFriendRequest true "body"
 // @Success 200 {object} responsepb.BaseResponse "Success"
 // @Failure 400 {object} responsepb.BaseResponse "err"
-// @Router /gateway/v1/user/friend/unblock-friend [post]
+// @Router /gateway/v1/user/friend/unblock [post]
 func (r *FriendRouter) unblockFriend(c *gin.Context) {
 	req := &friendpb.BaseFriendRequest{}
 	if err := c.ShouldBindWith(req, request.PbJSONBinding{}); err != nil {
